--- a/css/contactus.css
+++ b/css/contactus.css
@@ -43,7 +43,8 @@ footer{
 }
 
 .form-area {
-  background-color: #FAFAFA;
+  border-radius: 15px !important;
+  background-color: #E8EFCF !important;
   padding: 10px 40px 60px;
   margin: 10px 0px 60px;
   border: 1px solid GREY;
@@ -63,7 +64,7 @@ footer{
 .paragraph1{
   text-align: center;
   padding: 60px;
-  font-family: "Times Roman New"
+  font-family: "Times Roman New";
   font-size: 20px;
   background-color: black;
   color: white;
